Fixed swiper issue, reduced image size, and improved text contrast

--- a/css/index.css
+++ b/css/index.css
@@ -572,6 +572,7 @@ nav button {
 
 .about-us h2 {
   font-size: 36px;
+  color: #202020;
 }
 
 .about-us-wrapper {
